--- a/recipes/GrilledCorn.html
+++ b/recipes/GrilledCorn.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>Grilled Corn</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/recipename.html">Recipe Title</a>
+    <h1>Grilled Corn with Cilantro Lime Butter</h1>
 </body>
 </html>
