Added new dir 'images' to store images for the recipe Modified index.html with some minor changes Modified GrilledCorn.html By Adding Image,recipe des,ingredients,Steps

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/recipename.html">Recipe Title</a>
+    <a href="recipes/GrilledCorn.html">Grilled Corn with Cilantro Lime Butter</a>
 </body>
 </html>
