--- a/recipes/GrilledCorn.html
+++ b/recipes/GrilledCorn.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Corn</title>
 </head>
 <body>
     <h1>Grilled Corn with Cilantro Lime Butter</h1>
+    <img src="../images/Corn.webp" alt="">
+    <h3>Description</h3>
+    <p>
+        This recipe takes an approx 15mins of prep time and requires atleast 20 mins of cooking.
+    </p>
+    <h3> Ingredients </h3>
+    <ul>
+        <li>1 cup butter</li>
+        <li>1/4 cup chopped fresh cilantro</li>
+        <li>1 and half talblespoons fresh lime juice</li>
+        <li>1 pinch cayenne pepper</li>
+        <li>8 ears corn on the cob, unhusked</li>
+        <li>3 quarts col water, or as needed to cover</li>
+    </ul>
+    <h3>Directions</h3>
+    <h4>Steps</h4>
+    <ol >
+        <li>Cream butter in a bowl until smooth; mix in cilantro, lime juice, and cayenne pepper until thoroughly combined. Cover and refrigerate 1 hour to blend flavors.
+        </li>
+        <li>Peel husks back from ears of corn starting at the top, leaving the husks attached at the bottom of the ears. Remove all the corn silk and close husks over the ears again. Cover corn ears with cold water in a large bowl until husks are thoroughly soaked, about 20 minutes</li>
+        <li>Preheat grill for medium heat and lightly oil the grate.</li>
+        <li>Place the corn in husks onto the hot grate and grill covered until husks are charred and the corn kernels are tender, 20 to 25 minutes, turning often. Strip off husks and serve corn with cilantro lime butter.</li>
+    </ol>
+    
 </body>
 </html>
