--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/GrilledCorn.html">Grilled Corn with Cilantro Lime Butter</a>
+    <ul>
+        <li><a href="recipes/GrilledCorn.html">Grilled Corn with Cilantro Lime Butter</a></li>
+        <li><a href="recipes/Salad.html">Peach and Tomato Caprese Salad</a></li>
+        <li><a href="recipes/Bruschetta.html">Bruschetta with Mozzarella</a></li>
+    </ul>
+    
 </body>
 </html>
